# UnitedCTF-2023

./: README.md
.github/: CONTRIBUTING.md
.github/challenge-example/: Dockerfile.example  README.md
.github/challenge-example/solution/: README.md
challenges/crypto/captain-octavius/: README.md  map.txt
challenges/crypto/prochain-arret/: README.md
challenges/crypto/roland-sans-argent/: README.md  challenge0.py  challenge0.txt  challenge1.py  challenge1.txt  challenge2.py  challenge2.txt  challenge3.py  challenge3.txt  challenge4.py  challenge4.txt
challenges/desjardins/: README.md
challenges/desjardins/deploy/: compose.yaml
challenges/desjardins/descriptions/: 01. Un navire intelligent.md  02. Es-tu le capitaine.md  03. Un secret mal gardé.md  04. Point de pivot.md  05. Le drapeau perdu.md  06. Petit équipage.md  07. Marin anonyme.md  08. Code source.md  09. Rôles des marins.md  10. Coffre au trésor.md
challenges/desjardins_passkeys/: README.md
challenges/desjardins_passkeys/deploy/: docker-compose.yml
challenges/forensics/deceptive-booty/: README.md
challenges/forensics/dread_roberts/: Dockerfile  README.md  docker-compose.yml
challenges/forensics/treasure_chest/: README.md  generate_challenge.sh
challenges/misc/carte-oceanique-1/: README.md
challenges/misc/carte-oceanique-2/: README.md
challenges/misc/carte-oceanique-3/: README.md
challenges/misc/carte-oceanique-4/: README.md
challenges/web/seaql2/: .gitignore  Cargo.toml  Dockerfile  README.md
challenges/web/seaql2/solution/: README.md
challenges/web/seaql2/src/: index.hbs  main.rs
(+319 files in other folders)
