[package]
name = "seaql-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.1"
env_logger = "0.10.0"
handlebars = "4.3.7"
r2d2 = "0.8.10"
serde = "1.0.183"
serde_json = "1.0.105"
sqlx = { version = "0.7.1", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
